# qqmail-cli

./: AGENTS.md  README.md  imap_client.py  main.py  pyproject.toml
.github/workflows/: release.yml
qqmail_cli/: imap_client.py  main.py
