[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qqmail-cli"
version = "0.2.0"
description = "腾讯企业邮箱 IMAP 命令行客户端"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click>=8.3.2",
    "python-dotenv>=1.2.2",
]

[project.scripts]
qqmail = "qqmail_cli.main:cli"
